--- a/sass/pages/_single-post.scss
+++ b/sass/pages/_single-post.scss
@@ -23,6 +23,14 @@
   }
 }
 
+.post {
+  .social-icon-large {
+    @include media(mobile) {
+      margin-right: 0;
+    }
+  }
+}
+
 .widget {
   ul {
     list-style: none outside none;
